--- a/index.html
+++ b/index.html
@@ -74,5 +74,9 @@
     </div>
     
     <script type="module" src="script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.8/dist/purify.min.js"></script>
+
 </body>
 </html>
